# embassy-start

./: .gitignore  README.md  embassy-start.code-workspace
.github/workflows/: test.yml
client/: Cargo.toml  README.md  rust-toolchain.toml
client/.cargo/: config.toml
client/app/: Cargo.toml
client/app/examples/test-harness/: main.rs
client/embedded-app/: Cargo.toml  build.rs  microbit_v2_memory.x  rust-toolchain.toml
client/embedded-app/.cargo/: config.toml
client/embedded-app/src/: main.rs  network.rs
client/embedded-app/src/boards/: microbit_v2.rs  mod.rs  nrf52840_dk.rs  nrf9160_dk_s.rs  stm32f767zi.rs  stm32h743zi.rs
client/nrf-app/: Cargo.toml
client/nrf-app/src/: main.rs  network.rs
client/nrf-app/src/boards/: mod.rs
client/stm-app/: Cargo.toml  build.rs  stm32f767zi_memory.x
client/stm-app/src/: main.rs  network.rs
client/stm-app/src/boards/: mod.rs
network-protocol/: Cargo.toml
network-protocol/src/: lib.rs
server/: Cargo.toml  README.md
server/app/: Cargo.toml
server/app/src/: lib.rs
server/embedded-app/: Cargo.toml  memory.x  rust-toolchain.toml  stm32f743zi_memory.x  stm32f767zi_memory.x
server/embedded-app/src/: main.rs  network.rs
server/embedded-app/src/boards/: microbit_v2.rs  stm32f767zi.rs  stm32h743zi.rs
server/nrf-app/: Cargo.toml  memory.x
server/nrf-app/src/: main.rs  network.rs
server/nrf-app/src/boards/: mod.rs  nrf52840_dk.rs  nrf9160_dk_s.rs
server/stm-app/: Cargo.toml  stm.org
server/stm-app/src/: main.rs  network.rs
server/stm-app/src/boards/: mod.rs  stm32f767zi.rs
