[package]
authors = ["Titan Class P/L"]
edition = "2018"
readme = "README.md"
name = "network-protocol"
version = "0.1.0"

[dependencies]
defmt = { version = "0.3", optional = true }
heapless = { version = "0.7.7", features = ["defmt-impl", "serde"] }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
