[package]
authors = ["Titan Class P/L"]
edition = "2018"
readme = "README.md"
name = "client"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = ">=0.6.15,<0.8"
defmt = "0.3"
defmt-rtt = "0.3"
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "b578e060d731434e900b0e70adc5b560a2f595b4", features = ["defmt", "nightly"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "b578e060d731434e900b0e70adc5b560a2f595b4", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "b578e060d731434e900b0e70adc5b560a2f595b4", features = ["defmt", "time-driver-tim2", "nightly"], optional = true }
# Uncomment the next two and comment the two above if you're wanting to hack on Embassy
#embassy = { path = "../../../../hacking/embassy/embassy", features = ["defmt", "nightly"] }
#embassy-nrf = { path = "../../../../hacking/embassy/embassy-nrf", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
#embassy-stm32 = { path = "../../../../hacking/embassy-rs/embassy.git", features = ["defmt", "time-driver-tim2", "nightly"], optional = true }
embedded-hal = "0.2.6"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = "0.7.7"
menu = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "0.7.0"
serde = { version = "1.0.126", default-features = false }

app = { path = "../app", features = ["defmt"]}
network-protocol = { path = "../../network-protocol", features = ["defmt"]}

[[bin]]
name = "client"
test = false
bench = false
doc = false

[features]
default = [
    "nrf52840-dk"
]

microbit-v2 = ["embassy-nrf/nrf52833", "_nrf"]
nrf52840-dk = ["embassy-nrf/nrf52840", "_nrf"]
nrf9160-dk-s = ["embassy-nrf/nrf9160-s", "_nrf"]
stm32h743zi = ["embassy-stm32/stm32h743zi", "_stm32"]
stm32f767zi = ["embassy-stm32/stm32f767zi", "_stm32"]

# Internal features - not intended for setting explicitly
_nrf = []
_stm32 = []

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
