[package]
authors = ["Titan Class P/L"]
edition = "2021"
readme = "README.md"
name = "client"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-hal = "0.2"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
heapless = "0.7"
menu = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
postcard = "1.0"
serde = { version = "1.0", default-features = false }

app = { path = "../app", features = ["defmt"]}
network-protocol = { path = "../../network-protocol", features = ["defmt"]}

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc"
features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "nightly"]

[dependencies.embassy-nrf]
git = "https://github.com/embassy-rs/embassy.git"
rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc"
features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"]
optional = true 

[dependencies.embassy-stm32]
git = "https://github.com/embassy-rs/embassy.git"
rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc"
features = ["defmt", "time-driver-tim2", "nightly"]
optional = true

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
rev = "fb27594b2eb2cca2aea25dd92a7b730c185b6ecc"
features = ["defmt", "nightly"] 

[[bin]]
name = "client"
test = false
bench = false
doc = false

[features]
default = [
    "nrf52840-dk"
]

microbit-v2 = ["embassy-nrf/nrf52833", "_nrf"]
nrf52840-dk = ["embassy-nrf/nrf52840", "_nrf"]
nrf9160-dk-s = ["embassy-nrf/nrf9160-s", "_nrf"]
stm32h743zi = ["embassy-stm32/stm32h743zi", "_stm32"]
stm32f767zi = ["embassy-stm32/stm32f767zi", "_stm32"]

# Internal features - not intended for setting explicitly
_nrf = []
_stm32 = []

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
