[package]
authors = ["Titan Class P/L"]
edition = "2018"
readme = "README.md"
name = "client"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
defmt = "0.3"
defmt-rtt = "0.3"
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "ad2f4694070104f8815563a0008141eec29c06cd", features = ["defmt"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "ad2f4694070104f8815563a0008141eec29c06cd", features = ["defmt", "time-driver-rtc1", "gpiote"] }
embedded-hal = "0.2.6"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = "0.7.7"
menu = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "0.7.0"
serde = { version = "1.0.126", default-features = false }

app = { path = "../app", features = ["defmt"]}
network-protocol = { path = "../../network-protocol", features = ["defmt"]}

[[bin]]
name = "client"
test = false
bench = false
doc = false

[features]
default = [
    "nrf52840-dk"
]

nrf52840-dk = ["embassy-nrf/nrf52840"]
nrf9160-dk-s = ["embassy-nrf/nrf9160-s"]
