[package]
authors = ["Titan Class P/L"]
edition = "2018"
readme = "README.md"
name = "server"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6.15,<0.8"
defmt = "0.3"
defmt-rtt = "0.3"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2", features = ["defmt", "integrated-timers", "nightly"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2", features = ["defmt", "time-driver-rtc1", "gpiote", "nightly"], optional = true }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2", features = ["defmt", "time-driver-tim2", "nightly"], optional = true }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b9599025868d3a5d0d8e773593b05df8b2fecf2", features = ["defmt", "nightly"] }
embedded-hal = "0.2.6"
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = "0.7.7"
menu = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "0.7.0"
serde = { version = "1.0.126", default-features = false }

app = { path = "../app", features = ["defmt"]}
network-protocol = { path = "../../network-protocol", features = ["defmt"]}

[[bin]]
name = "server"
test = false
bench = false
doc = false

[features]
default = [
    "nrf52840-dk"
]

microbit-v2 = ["embassy-nrf/nrf52833", "_nrf"]
nrf52840-dk = ["embassy-nrf/nrf52840", "_nrf"]
nrf9160-dk-s = ["embassy-nrf/nrf9160-s", "_nrf"]
stm32h743zi = ["embassy-stm32/stm32h743zi", "_stm32"]
stm32f767zi = ["embassy-stm32/stm32f767zi", "_stm32"]

# Internal features - not intended for setting explicitly
_nrf = []
_stm32 = []

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
